# trainkit

./: README.md  pyproject.toml
docs/nanochat/: run_base_eval.md
scripts/: add_path.sh  setup_runpod.sh
src/trainkit/hf_bucket/: DESIGN.md  main.py
tests/: test_hf_bucket.py
tests/trainkit/hf_bucket/: test_hf_bucket_integration.py
