[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trainkit"
version = "0.1.0"
description = "Toolkits for training models on Cloud GPUs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface_hub>=1.7.0",
    "typer>=0.24"
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trainkit"]
